k8s/addons/argocd/overlays/do-private/ingress-argocd-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-public
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - argocd-do-osdu.esstar.com.vn
    secretName: cf-origin-argocd-tls
  rules:
  - host: argocd-do-osdu.esstar.com.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
